# OpenGL-FireRaytracer

./: .gitignore  CMakeLists.txt  Camera.hh  Fire.hh  KDTree.cpp  KDTree.hh  Main.cpp  Material.hh  ObjLoader.hh  Object.hh  Octree.hh  Particle.hh  Particule.hh  README.md  Scene.hh  TGA.hh  Transformations.hh  Vector2.hh  Vector3.hh  matrix4.hh  program.hh
assets/: Flame_Particle.tga  fragment.shd  geometry.shd  particleFragment.shd  particleVertex.shd  vertex.shd
assets/Fire/: Flame_Particle.tga  geometry.shd
assets/Scene/: Heavy.mtl  fragment.shd  vertex.shd
assets/textures/armchair/: StylizedFurnitureSet_armchair_DiffuseOpacity.tga
assets/textures/christmasPresents/: StylizedFurnitureSet_christmasPresents_DiffuseOpacity.tga
assets/textures/fireplace/: StylizedFurnitureSet_fireplace_DiffuseOpacity.tga
assets/textures/firniture/: StylizedFurnitureSet_furniture_DiffuseOpacity.tga
assets/textures/spruce/: spruce_DiffuseOpacity.tga
